@@ -2,6 +2,9 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-161 - Handling null messages and edges when initializing
+  IntIntNullIntVertex (dlogothetis via aching).
+
   GIRAPH-156: Users should be able to set simple 'custom arguments'
   via org.apache.giraph.GiraphRunner (ssc)
 
